fix dark mode

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,12 @@ h6 {
   color: #ffffff;
 }
 
+strong,
+b {
+  color: #ffffff;
+  font-weight: bold;
+}
+
 hr {
   border-color: #333333;
 }
